// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots List List 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <ul
      class="List-sc-1cqkmnl-0 jrhpm"
      color="currentColor"
    >
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With compact spacing 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <ul
      class="List-sc-1cqkmnl-0 gfYBVm"
      color="currentColor"
    >
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With custom colour 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <ul
      class="List-sc-1cqkmnl-0 cIngjC"
      color="red"
    >
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With custom font size and line height 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <ul
      class="List-sc-1cqkmnl-0 dPxgHI"
      color="currentColor"
      font-size="small"
    >
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 deWKnu"
        color="currentColor"
        font-size="large"
      >
        Larger List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With left alignment 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <ul
      class="List-sc-1cqkmnl-0 joVEnl"
      color="currentColor"
    >
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        class="ListItem-qqenhw-0 gzsWDK"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;
